The paginator on the front page no longer jumps around. Fixes #46

--- a/custom/styles.styl
+++ b/custom/styles.styl
@@ -22,6 +22,18 @@ html {
     }
 }
 
+// center the paginator
+.archive, .tag, .category {
+    .pagination {
+        text-align: center;
+    }
+}
+
+// center the footer
+.footer .footer-inner {
+    text-align: center;
+}
+
 // make empty post nonclickable
 .post-title-link.post-empty {
     pointer-events: none;
